--- a/index.html
+++ b/index.html
@@ -317,10 +317,11 @@
             </div>
         </div>
 
+        
         <div class="row">
             <div class="column large-4 medium-6 small-12"> <!-- Один элемент в первом ряду -->
                 <div class="folio-item">
-                    <a href="#" class="folio-item__thumb">
+                    <a href="https://www.kaggle.com/code/dmitryellison/glade-segmentation-cv-workshop-agni-summer-2023" class="folio-item__thumb">
                         <img src="images/portfolio/glade.jpg" alt="">
                     </a>
                 </div> <!-- end folio-item -->
@@ -328,7 +329,7 @@
 
             <div class="column large-4 medium-6 small-12"> <!-- Один элемент в первом ряду -->
                 <div class="folio-item">
-                    <a href="#" class="folio-item__thumb">
+                    <a href="https://www.kaggle.com/code/dmitryellison/face-generation-dcgan-knn-0-7975-pytorch" class="folio-item__thumb">
                         <img src="images/portfolio/dcgan.jpg" alt="">
                     </a>
                 </div> <!-- end folio-item -->
@@ -336,7 +337,7 @@
 
             <div class="column large-4 medium-6 small-12"> <!-- Один элемент во втором ряду -->
                 <div class="folio-item">
-                    <a href="#" class="folio-item__thumb">
+                    <a href="https://www.kaggle.com/code/dmitryellison/fcnn-with-lasso-and-ridge-regularization-pytorch" class="folio-item__thumb">
                         <img src="images/portfolio/lasso_ridge.jpg" alt="">
                     </a>
                 </div> <!-- end folio-item -->
@@ -344,7 +345,7 @@
 
             <div class="column large-4 medium-6 small-12"> <!-- Один элемент в первом ряду -->
                 <div class="folio-item">
-                    <a href="#" class="folio-item__thumb">
+                    <a href="https://www.kaggle.com/code/dmitryellison/xt122-dl-resnet-encoder-rf-96-accuracy" class="folio-item__thumb">
                         <img src="images/portfolio/face_rec.jpg" alt="">
                     </a>
                 </div> <!-- end folio-item -->
@@ -354,7 +355,7 @@
 
             <div class="column large-4 medium-6 small-12"> <!-- Один элемент во втором ряду -->
                 <div class="folio-item">
-                    <a href="#" class="folio-item__thumb">
+                    <a href="https://www.kaggle.com/code/dmitryellison/ryan-gosling-with-neural-style-transfer" class="folio-item__thumb">
                         <img src="images/portfolio/nst.jpg" alt="">
                     </a>
                 </div> <!-- end folio-item -->
@@ -362,13 +363,12 @@
 
             <div class="column large-4 medium-6 small-12"> <!-- Один элемент во втором ряду -->
                 <div class="folio-item">
-                    <a href="#" class="folio-item__thumb">
+                    <a href="https://www.kaggle.com/code/dmitryellison/face-generation-wgan-gp-pytorch" class="folio-item__thumb">
                         <img src="images/portfolio/wgan.jpg" alt="">
                     </a>
                 </div> <!-- end folio-item -->
             </div>
         </div> <!-- end row -->
-
 
     </section> <!-- end s-portfolio -->
 
