--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                     </div>
 
                     <p class="highlight_span">
-                        I worked on optimizing the architecture of a neural model for segmentation. I managed to <span>reduce</span> the number of parameters <span>by 75%</span>.
-                        I also worked on data <span>augmentation</span> using PyTorch and image preprocessing for the segmentation of human body parts.
+                        I worked on optimizing the architecture of a neural model for segmentation. I managed to reduce the number of parameters by 75%.
+                        I also worked on data augmentation using PyTorch and image preprocessing for the segmentation of human body parts.
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -194,7 +194,7 @@
                     </div>
 
                     <p class="highlight_span">
-                        Together with my classmates, we presented a paper on the project <span>Generative Models in the Fashion Business</span> at the Young Scientists Congress.
+                        Together with my classmates, we presented a paper on the project Generative Models in the Fashion Business at the Young Scientists Congress.
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -216,7 +216,7 @@
                     </div>
 
                     <p class="highlight_span">
-                        I participated in a summer school as part of the team <span>Computer Vision for Oil and Gas Companies</span>. ML backend: data annotation, preprocessing, and augmentation. Model selection and training in PyTorch. The final result of our team's work was an MVP (Minimum Viable Product).
+                        I participated in a summer school as part of the team Computer Vision for Oil and Gas Companies. ML backend: data annotation, preprocessing, and augmentation. Model selection and training in PyTorch. The final result of our team's work was an MVP (Minimum Viable Product).
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -262,7 +262,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    At the moment, I am studying in the <span>third year</span> of the Robotics and Artificial Intelligence faculty. I have an average GPA of 4.39 for the first year and 4.75 for the second year.
+                    At the moment, I am studying in the third year of the Robotics and Artificial Intelligence faculty. I have an average GPA of 4.39 for the first year and 4.75 for the second year.
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -280,7 +280,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    I successfully completed the advanced course with a score of 91%. I worked with <span>segmentation</span>, <span>detection</span>, <span>autoencoders</span>, and <span>generative adversarial models</span>. In addition, I became acquainted with classical machine learning models and learned about transfer learning. 
+                    I successfully completed the advanced course with a score of 91%. I worked with segmentation, detection, autoencoders, and generative adversarial models. In addition, I became acquainted with classical machine learning models and learned about transfer learning. 
                     </p>
 
                 </div> <!-- end resume-block -->
