--- a/index.html
+++ b/index.html
@@ -317,58 +317,61 @@
             </div>
         </div>
 
-        
-        <div class="row">
-            <div class="column large-4 medium-6 small-12"> <!-- Один элемент в первом ряду -->
-                <div class="folio-item">
-                    <a href="https://www.kaggle.com/code/dmitryellison/glade-segmentation-cv-workshop-agni-summer-2023" class="folio-item__thumb">
-                        <img src="images/portfolio/glade.jpg" alt="">
-                    </a>
-                </div> <!-- end folio-item -->
-            </div>
+        <table>
+          <tr>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/glade-segmentation-cv-workshop-agni-summer-2023">
+                  <img src="images/portfolio/glade.jpg" alt="Изображение 1">
+                  <p>Glade Segmentation part at AGNI workshop summer 2023</p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/face-generation-dcgan-knn-0-7975-pytorch">
+                  <img src="images/portfolio/dcgan.jpg" alt="Изображение 2">
+                  <p>Face generation DCGAN with additional improvements</p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/fcnn-with-lasso-and-ridge-regularization-pytorch">
+                  <img src="images/portfolio/lasso_ridge.jpg" alt="Изображение 3">
+                  <p>Digit Recognizer with Lasso and Ridge regulization</p>
+                </a>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/xt122-dl-resnet-encoder-rf-96-accuracy">
+                  <img src="images/portfolio/face_rec.jpg" alt="Изображение 4">
+                  <p>Face Recognition on small dataset with Resnet Encoder and Random Forest</p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/ryan-gosling-with-neural-style-transfer">
+                  <img src="images/portfolio/nst.jpg" alt="Изображение 5">
+                  <p>Neural Style Transfer</p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/face-generation-wgan-gp-pytorch">
+                  <img src="images/portfolio/wgan.jpg" alt="Изображение 6">
+                  <p>GAN with Wesserstein Loss and Gradient Penalty</p>
+                </a>
+              </div>
+            </td>
+          </tr>
+        </table>
 
-            <div class="column large-4 medium-6 small-12"> <!-- Один элемент в первом ряду -->
-                <div class="folio-item">
-                    <a href="https://www.kaggle.com/code/dmitryellison/face-generation-dcgan-knn-0-7975-pytorch" class="folio-item__thumb">
-                        <img src="images/portfolio/dcgan.jpg" alt="">
-                    </a>
-                </div> <!-- end folio-item -->
-            </div>
-
-            <div class="column large-4 medium-6 small-12"> <!-- Один элемент во втором ряду -->
-                <div class="folio-item">
-                    <a href="https://www.kaggle.com/code/dmitryellison/fcnn-with-lasso-and-ridge-regularization-pytorch" class="folio-item__thumb">
-                        <img src="images/portfolio/lasso_ridge.jpg" alt="">
-                    </a>
-                </div> <!-- end folio-item -->
-            </div>
-
-            <div class="column large-4 medium-6 small-12"> <!-- Один элемент в первом ряду -->
-                <div class="folio-item">
-                    <a href="https://www.kaggle.com/code/dmitryellison/xt122-dl-resnet-encoder-rf-96-accuracy" class="folio-item__thumb">
-                        <img src="images/portfolio/face_rec.jpg" alt="">
-                    </a>
-                </div> <!-- end folio-item -->
-            </div>
-
-            
-
-            <div class="column large-4 medium-6 small-12"> <!-- Один элемент во втором ряду -->
-                <div class="folio-item">
-                    <a href="https://www.kaggle.com/code/dmitryellison/ryan-gosling-with-neural-style-transfer" class="folio-item__thumb">
-                        <img src="images/portfolio/nst.jpg" alt="">
-                    </a>
-                </div> <!-- end folio-item -->
-            </div>
-
-            <div class="column large-4 medium-6 small-12"> <!-- Один элемент во втором ряду -->
-                <div class="folio-item">
-                    <a href="https://www.kaggle.com/code/dmitryellison/face-generation-wgan-gp-pytorch" class="folio-item__thumb">
-                        <img src="images/portfolio/wgan.jpg" alt="">
-                    </a>
-                </div> <!-- end folio-item -->
-            </div>
-        </div> <!-- end row -->
 
     </section> <!-- end s-portfolio -->
 
