--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     </div>
 
                     <div class="column large-12">
-                        <a href="https://t.me/dimkablin" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
+                        <a href="mailto:dmitryellison@gmail.com" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
                     </div>
                 </div> <!-- end contact-infos -->
 
@@ -445,7 +445,7 @@
             </div>
 
             <div class="column large-7 medium-6 w-1000-stack ss-copyright">
-                <span>Introduced by <a href="https://t.me/dimkablin">Dmitry Zolotarev</a></span>
+                <span>Developed by <a href="https://t.me/dimkablin">Dmitry Zolotarev</a></span>
             </div>
         </div>
 
