--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     </div>
 
                     <div class="column large-12">
-                        <a href="https://t.me/dimkablin" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
+                        <a href="mailto:dmitryellison@gmail.com" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
                     </div>
                 </div> <!-- end contact-infos -->
 
