--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             Tatneft
                         </h4>
                         <p class="resume-block__header-meta">
-                            <span>ML Engineer</span> 
+                            <span>MLOps</span> 
                             <span class="resume-block__header-date">
                                 August 2022 - present
                             </span>
