--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     </div>
 
                     <p class="highlight_span">
-                        I am involved in the development of internal solutions for the TATNEFT group of companies.
+                        I am involved in the development of internal solutions for the TATNEFT group of companies. In this position, I'm responsible for selecting, training, and deploying models, connecting the backend with the frontend to simplify and improve user experiences.
                     </p>
 
                 </div> <!-- end resume-block -->
