--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p >
-                I am a third-year student at <span>ITMO University</span>, majoring in Robotics and Artificial Intelligence, and I work as an ML engineer. My tech stack includes <span>Docker</span> and Python with libraries like <span>PyTorch</span>, <span>scikit-learn</span>, <span>OpenCV</span>, <span>FastAPI</span>, <span>unittest</span>, <span>transformers</span>. Additionally, I utilize <span>Roboflow</span> and <span>Label Studio</span> for data annotation in specific machine learning tasks. My dream is to become a Kaggle GrandMaster.
+                I am a third-year student at <span>ITMO University</span>, majoring in Robotics and Artificial Intelligence, and I work as an ML engineer. My tech stack includes <span>Docker</span> and Python with libraries like <span>PyTorch</span>, <span>scikit-learn</span>, <span>OpenCV</span>, <span>transformers</span>, <span>FastAPI</span>, <span>unittest</span>. Additionally, I utilize <span>Roboflow</span> and <span>Label Studio</span> for data annotation in specific machine learning tasks. My dream is to become a Kaggle GrandMaster.
                 </p>
 
                 <hr>
