--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <div class="s-hero__content-about">
 
-                    <h1 id="typewriter-heading">I'm Dmitry Zolotarev</h1>
+                    <h1 id="typewriter-heading">I'M DMITRY ZOLOTAREV</h1>
 
                     <h3 id="typewriter-text">
                     I am a <span>machine learning engineer</span>  who experiments with various architectures, training them to perceive, listen, and predict the hidden, explicit, and future aspects. Let's <a class="smoothscroll" href="#about">start scrolling</a>
