--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <li class="current"><a class="smoothscroll" href="#hero">Home</a></li>
                     <li><a class="smoothscroll" href="#about">About</a></li>
                     <li><a class="smoothscroll" href="#resume">Resume</a></li>
+                    <li><a class="smoothscroll" href="#portfolio">Works</a></li>
                     <li><a class="smoothscroll" href="#contact">Contact me</a></li>
                 </ul>
             </nav>
@@ -304,6 +305,67 @@
         </div> <!-- s-resume__section -->
     </section> <!-- end s-resume -->
 
+
+     <!-- portfolio
+    ================================================== -->
+    <section id="portfolio" class="s-portfolio target-section">
+        <table>
+          <tr>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/glade-segmentation-cv-workshop-agni-summer-2023">
+                  <img src="images/portfolio/glade.jpg" alt="Изображение 1">
+                  <p>Glade Segmentation part at AGNI workshop summer 2023</p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/face-generation-dcgan-knn-0-7975-pytorch">
+                  <img src="images/portfolio/dcgan.jpg" alt="Изображение 2">
+                  <p>Face generation DCGAN with additional improvements</p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/fcnn-with-lasso-and-ridge-regularization-pytorch">
+                  <img src="images/portfolio/lasso_ridge.jpg" alt="Изображение 3">
+                  <p>Digit Recognizer with Lasso and Ridge regulization</p>
+                </a>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/xt122-dl-resnet-encoder-rf-96-accuracy">
+                  <img src="images/portfolio/face_rec.jpg" alt="Изображение 4">
+                  <p>Face Recognition on small dataset with Resnet Encoder and Random Forest</p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/ryan-gosling-with-neural-style-transfer">
+                  <img src="images/portfolio/nst.jpg" alt="Изображение 5">
+                  <p>Neural Style Transfer</p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="table-cell">
+                <a href="https://www.kaggle.com/code/dmitryellison/face-generation-wgan-gp-pytorch">
+                  <img src="images/portfolio/wgan.jpg" alt="Изображение 6">
+                  <p>GAN with Wesserstein Loss and Gradient Penalty</p>
+                </a>
+              </div>
+            </td>
+          </tr>
+        </table>
+
+
+    </section> <!-- end s-portfolio -->
     
     <!-- contact
     ================================================== -->
@@ -350,7 +412,7 @@
                     </div>
 
                     <div class="column large-12">
-                        <a href="mailto:dmitryellison@gmail.com" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
+                        <a href="mailto:dmitryellison@gmail.com" class="mailtoui btn h-full-width">Let's Talk</a>
                     </div>
                 </div> <!-- end contact-infos -->
 
