updated works block

--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
 
                 </div> <!-- end resume-block -->
             </div>
-        </div> <!-- s-resume__section -->
+        </div> 
+<!-- s-resume__section -->
 
 
         <div class="row s-resume__section">
@@ -308,63 +309,121 @@
 
      <!-- portfolio
     ================================================== -->
+
     <section id="portfolio" class="s-portfolio target-section">
-        <table>
-          <tr>
-            <td>
-              <div class="table-cell">
-                <a href="https://www.kaggle.com/code/dmitryellison/glade-segmentation-cv-workshop-agni-summer-2023">
-                  <img src="images/portfolio/glade.jpg" alt="Изображение 1">
-                  <p>Glade Segmentation part at AGNI workshop summer 2023</p>
-                </a>
-              </div>
-            </td>
-            <td>
-              <div class="table-cell">
-                <a href="https://www.kaggle.com/code/dmitryellison/face-generation-dcgan-knn-0-7975-pytorch">
-                  <img src="images/portfolio/dcgan.jpg" alt="Изображение 2">
-                  <p>Face generation DCGAN with additional improvements</p>
-                </a>
-              </div>
-            </td>
-            <td>
-              <div class="table-cell">
-                <a href="https://www.kaggle.com/code/dmitryellison/fcnn-with-lasso-and-ridge-regularization-pytorch">
-                  <img src="images/portfolio/lasso_ridge.jpg" alt="Изображение 3">
-                  <p>Digit Recognizer with Lasso and Ridge regulization</p>
-                </a>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="table-cell">
-                <a href="https://www.kaggle.com/code/dmitryellison/xt122-dl-resnet-encoder-rf-96-accuracy">
-                  <img src="images/portfolio/face_rec.jpg" alt="Изображение 4">
-                  <p>Face Recognition on small dataset with Resnet Encoder and Random Forest</p>
-                </a>
-              </div>
-            </td>
-            <td>
-              <div class="table-cell">
-                <a href="https://www.kaggle.com/code/dmitryellison/ryan-gosling-with-neural-style-transfer">
-                  <img src="images/portfolio/nst.jpg" alt="Изображение 5">
-                  <p>Neural Style Transfer</p>
-                </a>
-              </div>
-            </td>
-            <td>
-              <div class="table-cell">
-                <a href="https://www.kaggle.com/code/dmitryellison/face-generation-wgan-gp-pytorch">
-                  <img src="images/portfolio/wgan.jpg" alt="Изображение 6">
-                  <p>GAN with Wesserstein Loss and Gradient Penalty</p>
-                </a>
-              </div>
-            </td>
-          </tr>
-        </table>
 
+        <div class="row s-portfolio__section">
+            <div class="column large-3 tab-12">
+                <h3 class="section-header-allcaps">Recent works</h3>
+            </div>
+            <div class="column large-9 tab-12">
 
+                <div class="portfolio-block">
+
+                    <div class="portfolio-block__header">
+                        <h4 class="h3">Vacancy Classificator</h4>
+                        <p class="portfolio-block__header-meta">
+                            <span>transformers</span>
+                        </p>
+                    </div>
+
+                    <p class="highlight_span">
+                    Vacancy Classificator
+                    </p>
+
+                </div> <!-- end portfolio-block -->
+
+                <div class="portfolio-block">
+
+                    <div class="portfolio-block__header">
+                        <h4 class="h3">Carrot OCR</h4>
+                        <p class="portfolio-block__header-meta">
+                            <span>FastAPI</span> <span>PostgreSQL</span> <span>Docker</span> <span>mmOCR</span> <span>EasyOCR</span> <span>Pytesseract</span>
+                        </p>
+                    </div>
+
+                    <p class="highlight_span">
+                    Application of OCR models for text recognition in photos. 
+                    </p>
+
+                </div> <!-- end portfolio-block -->
+
+                <div class="portfolio-block">
+
+                    <div class="portfolio-block__header">
+                        <h4 class="h3">Face Recognition</h4>
+                        <p class="portfolio-block__header-meta">
+                            <span>Pytorch</span> <span>sklearn</span> <span>Competition</span>
+                        </p>
+                    </div>
+
+                    <p class="highlight_span">
+                    Face Recognition on small dataset with Resnet Encoder and Random Forest
+                    </p>
+
+                </div> <!-- end portfolio-block -->
+
+                <div class="portfolio-block">
+
+                    <div class="portfolio-block__header">
+                        <h4 class="h3">Neural Style Transfer</h4>
+                        <p class="portfolio-block__header-meta">
+                            <span>Pytorch</span>
+                        </p>
+                    </div>
+
+                    <p class="highlight_span">
+                    Neural Style Transfer
+                    </p>
+
+                </div> <!-- end portfolio-block -->
+
+                <div class="portfolio-block">
+
+                    <div class="portfolio-block__header">
+                        <h4 class="h3">Face generation DCGAN</h4>
+                        <p class="portfolio-block__header-meta">
+                            <span>Pytorch</span>
+                        </p>
+                    </div>
+
+                    <p class="highlight_span">
+                    Face generation DCGAN with additional improvements
+                    </p>
+
+                </div> <!-- end portfolio-block -->
+
+                <div class="portfolio-block">
+
+                    <div class="portfolio-block__header">
+                        <h4 class="h3">Digit Recognizer Lasso and Ridge regulization</h4>
+                        <p class="portfolio-block__header-meta">
+                            <span>Pytorch</span> <span>Competition</span> 
+                        </p>
+                    </div>
+
+                    <p class="highlight_span">
+                    Digit Recognizer with Lasso and Ridge regulization
+                    </p>
+
+                </div> <!-- end portfolio-block -->
+
+                <div class="portfolio-block">
+
+                    <div class="portfolio-block__header">
+                        <h4 class="h3">Glade Segmentation AGNI workshop</h4>
+                        <p class="portfolio-block__header-meta">
+                            <span>Pytorch</span> 
+                        </p>
+                    </div>
+
+                    <p class="highlight_span">
+                    
+                    </p>
+
+                </div> <!-- end portfolio-block -->
+            </div>
+        </div> <!-- s-portfolio__section -->
     </section> <!-- end s-portfolio -->
     
     <!-- contact
