updated works block 1.01

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Dmitry Zolotarev</title>
+    <title>Dmitry Zolotarev | Machine Learning Engineer</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -321,7 +321,9 @@
                 <div class="portfolio-block">
 
                     <div class="portfolio-block__header">
-                        <h4 class="h3">Vacancy Classificator</h4>
+                        <h4 class="h3">
+                            <a href="https://github.com/dimkablin/VacancyClassificator">Vacancy Classificator</a>
+                        </h4>
                         <p class="portfolio-block__header-meta">
                             <span>transformers</span>
                         </p>
@@ -336,9 +338,11 @@
                 <div class="portfolio-block">
 
                     <div class="portfolio-block__header">
-                        <h4 class="h3">Carrot OCR</h4>
+                        <h4 class="h3">
+                            <a href="https://github.com/dimkablin/carrotOCR">Carrot OCR</a>
+                        </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>FastAPI</span> <span>PostgreSQL</span> <span>Docker</span> <span>mmOCR</span> <span>EasyOCR</span> <span>Pytesseract</span>
+                            <span>FastAPI</span> <span>PostgreSQL</span> <span>Docker</span> <span>openmim</span>
                         </p>
                     </div>
 
@@ -351,9 +355,11 @@
                 <div class="portfolio-block">
 
                     <div class="portfolio-block__header">
-                        <h4 class="h3">Face Recognition</h4>
+                        <h4 class="h3">
+                            <a href="https://www.kaggle.com/code/dmitryellison/xt122-dl-resnet-encoder-rf-96-accuracy">Face Recognition</a>
+                        </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>Pytorch</span> <span>sklearn</span> <span>Competition</span>
+                            <span>PyTorch</span> <span>sklearn</span> <span>Competition</span>
                         </p>
                     </div>
 
@@ -366,9 +372,11 @@
                 <div class="portfolio-block">
 
                     <div class="portfolio-block__header">
-                        <h4 class="h3">Neural Style Transfer</h4>
+                        <h4 class="h3">
+                            <a href="https://www.kaggle.com/code/dmitryellison/ryan-gosling-with-neural-style-transfer">Neural Style Transfer</a>
+                        </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>Pytorch</span>
+                            <span>PyTorch</span>
                         </p>
                     </div>
 
@@ -381,9 +389,11 @@
                 <div class="portfolio-block">
 
                     <div class="portfolio-block__header">
-                        <h4 class="h3">Face generation DCGAN</h4>
+                        <h4 class="h3">
+                            <a href="https://www.kaggle.com/code/dmitryellison/face-generation-dcgan-knn-0-7975-pytorch">Face generation DCGAN</a>
+                        </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>Pytorch</span>
+                            <span>PyTorch</span> <span>sklearn</span>
                         </p>
                     </div>
 
@@ -396,9 +406,11 @@
                 <div class="portfolio-block">
 
                     <div class="portfolio-block__header">
-                        <h4 class="h3">Digit Recognizer Lasso and Ridge regulization</h4>
+                        <h4 class="h3">
+                            <a href="https://www.kaggle.com/code/dmitryellison/fcnn-with-lasso-and-ridge-regularization-pytorch">Digit Recognizer Lasso and Ridge regulization</a>
+                        </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>Pytorch</span> <span>Competition</span> 
+                            <span>PyTorch</span> <span>Competition</span> 
                         </p>
                     </div>
 
@@ -411,9 +423,11 @@
                 <div class="portfolio-block">
 
                     <div class="portfolio-block__header">
-                        <h4 class="h3">Glade Segmentation AGNI workshop</h4>
+                        <h4 class="h3">
+                            <a href="https://www.kaggle.com/code/dmitryellison/glade-segmentation-cv-workshop-agni-summer-2023">Glade Segmentation AGNI workshop</a>
+                        </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>Pytorch</span> 
+                            <span>PyTorch</span> 
                         </p>
                     </div>
 
