updated text of index.html#works

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    At the moment, I am studying in the third year of the Robotics and Artificial Intelligence faculty. I have an average GPA of 4.39 for the first year and 4.75 for the second year.
+                    At the moment, I am studying in the third year of the Robotics and Artificial Intelligence faculty. I have an average GPA of 4.39 out of 5 for the first year and 4.75 for the second one.
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -313,7 +313,7 @@
 
         <div class="row s-portfolio__section">
             <div class="column large-3 tab-12">
-                <h3 class="section-header-allcaps">Recent works</h3>
+                <h3 class="section-header-allcaps">Works</h3>
             </div>
             <div class="column large-9 tab-12">
 
@@ -329,7 +329,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    Vacancy Classificator
+                    I have implemented a Zero-Shot Classification model from Hugging Face for the task of categorizing key skills on resumes extracted from the hh.ru website.
                     </p>
 
                 </div> <!-- end portfolio-block -->
@@ -346,7 +346,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    Application of OCR models for text recognition in photos. 
+                    The application of OCR models for the purpose of recognizing text in photos.
                     </p>
 
                 </div> <!-- end portfolio-block -->
@@ -363,7 +363,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    Face Recognition on small dataset with Resnet Encoder and Random Forest
+                    Face recognition using a ResNet encoder and a Random Forest model on a small dataset for a Kaggle competition.
                     </p>
 
                 </div> <!-- end portfolio-block -->
@@ -380,7 +380,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    Neural Style Transfer
+                    I've successfully applied Neural Style Transfer using pure PyTorch.
                     </p>
 
                 </div> <!-- end portfolio-block -->
@@ -397,7 +397,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    Face generation DCGAN with additional improvements
+                    I've implemented a face generation system using a DCGAN (Deep Convolutional Generative Adversarial Network) with additional enhancements for improved image quality and realism.
                     </p>
 
                 </div> <!-- end portfolio-block -->
@@ -414,7 +414,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    Digit Recognizer with Lasso and Ridge regulization
+                    I've developed a digit recognizer using Lasso and Ridge regularization techniques for improved accuracy and robustness."
                     </p>
 
                 </div> <!-- end portfolio-block -->
@@ -431,7 +431,7 @@
                     </div>
 
                     <p class="highlight_span">
-                    
+                    I've completed a portion of the AGNI workshop, specifically focusing on glade segmentation.
                     </p>
 
                 </div> <!-- end portfolio-block -->
