updated text in the index.html#works

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                             <a href="https://www.kaggle.com/code/dmitryellison/glade-segmentation-cv-workshop-agni-summer-2023">Glade Segmentation AGNI workshop</a>
                         </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>PyTorch</span> 
+                            <span>PyTorch</span> <span>Roboflow</span>
                         </p>
                     </div>
 
