--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
         <div class="row s-portfolio__section">
             <div class="column large-3 tab-12">
-                <h3 class="section-header-allcaps">Works</h3>
+                <h3 class="section-header-allcaps">Recent Works</h3>
             </div>
             <div class="column large-9 tab-12">
 
@@ -358,7 +358,7 @@
                             <a href="https://www.kaggle.com/code/dmitryellison/xt122-dl-resnet-encoder-rf-96-accuracy">Face Recognition</a>
                         </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>PyTorch</span> <span>sklearn</span> <span>Competition</span>
+                            <span>PyTorch</span> <span>sklearn</span> <span class="meta-comp">Competition</span>
                         </p>
                     </div>
 
@@ -409,7 +409,7 @@
                             <a href="https://www.kaggle.com/code/dmitryellison/fcnn-with-lasso-and-ridge-regularization-pytorch">Digit Recognizer Lasso and Ridge regulization</a>
                         </h4>
                         <p class="portfolio-block__header-meta">
-                            <span>PyTorch</span> <span>Competition</span> 
+                            <span>PyTorch</span> <span class="meta-comp">Competition</span> 
                         </p>
                     </div>
 
