--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
             </div>
 
             <div class="column large-7 medium-6 w-1000-stack ss-copyright">
-                <span>Introduced by <a href="https://t.me/dimkablin">Dmitry Zolotarev</a></span>
+                <span>Inspired by <a href="https://styleshout.com/">StyleShout</a></span>
             </div>
         </div>
 
