--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
                     </div>
 
                     <p class="highlight_span">
-                        I worked on optimizing the architecture of a neural model for segmentation. I managed to reduce the number of parameters by 75%.
-                        I also worked on data augmentation using PyTorch and image preprocessing for the segmentation of human body parts.
+                        My team and I worked on a smart mirror project. To solve the problem, we have trained segmentation models((UNet, YOLOv8) and generatively competitive networks (GAN, GAN-GP).
                     </p>
 
                 </div> <!-- end resume-block -->
